<resources>
    <string name="app_name">Budgey</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_google_login">Sign in</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="time">Time</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="b">B</string>
    <string name="date_placeholder">[date-placeholder]</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="choose_category">Choose Category</string>
    <string name="_0_00">$ 0.00</string>
    <string name="expense">Expense</string>
    <string name="blank" />
    <string name="income">Income</string>
    <string name="tax_deductable">Tax\nDeductable</string>
    <string name="openp">(</string>
    <string name="closep">)</string>
    <string name="ce">CE</string>
    <string name="percent">%</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="x">X</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="min">-</string>
    <string name="_0">0</string>
    <string name="dec">.</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="btn_logout_from_google">Logout</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_tab_navigation">tab_navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_activity_pre_load">preLoad</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="pos">+</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="neg">-</string>
    <string name="budget">Budget:</string>
    <string name="logo">Logo</string>
    <string name="textview">TextView</string>
    <string name="touch_to_raise_transactions">Touch to raise Transactions</string>
    <string name="delete_account">Delete Account</string>
    <string name="google_icon">google_icon</string>
    <string name="profile_image">profile_image</string>
    <string name="method_image">method image</string>

</resources>
